converted navigation bar to collapsable design. Fixed mobile.scss partial

--- a/app/stylesheets/_landing.scss
+++ b/app/stylesheets/_landing.scss
@@ -1,3 +1,7 @@
+.nav button {
+  display: none;
+}
+
   .hero-content {
     background-color: #2F1D57;
     padding: 100px 0;
