--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -8,6 +8,10 @@
   @import "profile";
   @import "mobile";
 
+
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+
 html {
   height: 100%;
 }
